<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Backgroud"
    android:orientation="vertical"
    android:id="@+id/drawlayout"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar_support"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contact"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/BackgroudInit"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvhotline"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:text="@string/txt_phone"
                style="@style/TextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50sp"
                style="@style/TextColor"
                android:id="@+id/tvsdt"
                android:text="0388832406"
                android:layout_marginBottom="2sp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="5sp"
                android:drawableRight="@drawable/phonec"
                android:gravity="right"
                android:text="@string/txt_call_now"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/BackgroudInit"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:text="Email: Datvemaybay@gmail.com"
                style="@style/TextColor" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/BackgroudInit"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:text="@string/txt_address"
                style="@style/TextColor" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/BackgroudInit"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:text= "Nhắn tin"
                style="@style/TextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60sp"
                style="@style/TextColor"
                android:id="@+id/sms"
                android:text="0388832406"
                android:layout_marginBottom="2sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:drawableRight="@drawable/mobile"
                android:text="Nhắn tin"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ivmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp"
            android:src="@drawable/map"
            />


    </LinearLayout>




    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity = "start">

        <include layout="@layout/toolbar" />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>